--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     
+}
+
+#container {
+    max-width: 900px;
+    min-height: 900px;
+    margin: 2% auto;
+    /* padding: 3%; */
+    background-image: url(./img/birthday-cake-cake-cheesecake-906559.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    box-shadow: 10px 10px 15px black;
+  }
+
+  #app {
+    margin: 2% auto;
+    padding: 4%;
+    background-color: rgba(255, 255, 255, 0.7);
+    max-width: 600px;
+    min-height:800px
+  }
+
+#birthday {
+    font-family: 'Butterfly Kids', cursive;
+}
+
+#credit {
+    color: lightgrey;
+    margin: 11.7em;
 }
